--- a/app/views/forms/housing/CBLadd-child1-loop.html
+++ b/app/views/forms/housing/CBLadd-child1-loop.html
@@ -12,7 +12,7 @@
         Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
-      <p class="govuk-body-l">Enter each child spending part of their time living with you</p>
+      <p class="govuk-body-l">Enter each child spending part of their time living with you.</p>
       <h2 class="govuk-heading-m">
           Child 1:
       </h2>
@@ -149,13 +149,6 @@
 </div>
 <div class="alt-notes-box">
 <p><a href="/forms/housing/CBLadd-children.html">Try an alternative</a></p>
-</div>
-<div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
-    <ul class="govuk-list govuk-list--bullet">
-   <li>I only coded 2 children, for the real form it will be 5</li>
-   <li><a href="/forms/housing/CBLadd-children.html">Try an alternative</a><strong> using javascript and adding all children on one page, this is close to what IT has developed so far</strong></li>
-   </ul>
 </div>
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
