--- a/app/views/forms/housing/CBLaddress.html
+++ b/app/views/forms/housing/CBLaddress.html
@@ -55,7 +55,7 @@
 <div class="UR-notes-box">
     <h3 class="govuk-heading-s">UR notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>this is provisional content following User Researcha and disussion with housing - it might changed soon</li>
+      <li>this is provisional content following User Research and disussion with housing - it might changed soon</li>
     </ul>
 </div>
 <div class="IT-notes-box">
