--- a/app/views/forms/housing/CBLaddress1-joint.html
+++ b/app/views/forms/housing/CBLaddress1-joint.html
@@ -19,17 +19,23 @@
       <div style="overflow: auto">
         <table class=" govuk-table half-width">
         <tbody class="govuk-table__body">
-          <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Address:</th><td class="govuk-table__cell no-border">{{data['addr1-joint']}}</td></tr>
-          <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Type of residence:</th><td class="ngovuk-table__cell o-border">{{data['type1-joint']}}</td></tr>
-          <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Date moved in:</th><td class="govuk-table__cell no-border">{{data['in1-joint-day']}}/{{data['in1-joint-month']}}/{{data['in1-joint-year']}}</td></tr>
-          <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Date moved out:</th><td class="govuk-table__cell no-border">{{data['out1-joint-day']}}/{{data['out1-joint-month']}}/{{data['ou1-jointt-year']}}</td></tr>
-          <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Reason for leaving:</th><td class="govuk-table__cell no-border">
-              {% if data['leave1-joint'] == 'Other' %}
-              {{data['reason1-joint-other']}}
-              {% else %}
-              {{data['leave1-joint']}}
-              {% endif %}
-          </td></tr>
+            <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Address:</th><td class="govuk-table__cell no-border">{{data['addr1-joint']}}</td></tr>
+            <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Type of residence:</th><td class="ngovuk-table__cell o-border">
+                {% if data['type1-joint'] == 'Other' %}
+                {{data['type1-other-joint']}}
+                {% else %}
+                {{data['type1-joint']}}
+                {% endif %}
+            </td></tr>
+            <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Date moved in:</th><td class="govuk-table__cell no-border">{{data['in1-joint']}}</td></tr>
+            <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Date moved out:</th><td class="govuk-table__cell no-border">{{data['out1-joint']}}</td></tr>
+            <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Reason for leaving:</th><td class="govuk-table__cell no-border">
+                {% if data['leave1-joint'] == 'Other' %}
+                {{data['reason1-other-joint']}}
+                {% else %}
+                {{data['leave1-joint']}}
+                {% endif %}
+            </td></tr>
         </tbody>
       </table>
     </div>
