--- a/app/views/forms/housing/CBLbabies.html
+++ b/app/views/forms/housing/CBLbabies.html
@@ -62,14 +62,10 @@
     </form>
     </div>
 </div>
-<div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
-   <p>Pattern agreed by Housing - Content provided by Sharon</p>
-</div>
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
    <p>new page - <strong>content has changed </strong></p>
-   <p>validation will be needed (if yes, textbox can't be empty) but will need the wording to be agreed before I can provide an error message</p>
+   <p>validation will be needed: Confirm if anyone pregnant (if yes, textbox can't be empty - Enter name and due date) </p>
 </div>
 
 {% endblock %}
