--- a/app/views/forms/housing/CBLbedroom.html
+++ b/app/views/forms/housing/CBLbedroom.html
@@ -214,24 +214,14 @@
     </div>
 </div>
 
-<div class="content-notes-box">
-    <h3 class="govuk-heading-s">Content notes:</h3>
-   <p>content need to be reviewed by both Housing and Sharon</p> 
-</div>
+
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
    <p>This screen was routing to the 5 years of addresses previously, but this screen has moved to earlier in the form</p> 
 </div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-  <p><strong>we will need to test this, because there is a lot on this screen now</strong></p>
-   <p>Agreed by housing - They do need to know if how many bedroom in the house and how many they can use as if it's over crowded, they get an extra priority</p> 
-   <p>This is grouping instead previous screens:</p>
-   <ul class="govuk-list govuk-list--bullet">
-     <li>how many bedrooms are in your current home</li>
-     <li>how many bedrooms can your household use</li>
-     <li>how many double</li>
-     <li>how many single</li>
+  <p><strong>Need to be reviewed</strong></p>
    </ul>
 </div>
 {% endblock %}
