--- a/app/views/forms/housing/CBLconnection-ER.html
+++ b/app/views/forms/housing/CBLconnection-ER.html
@@ -120,8 +120,9 @@
     <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
       <li>can be coded - one change for support for a or from a relative and was radio button question with reveal before - not anymore</li>
-      <li>extra textbox for other reason, and relative live in area / different label for each though </li>
+      <li>extra textbox for other reason, and another for relative live in area / different label for each though </li>
       <li>we need at least one checked, and if open a text box, then it needs not to be empty</li>
+      <li>there are two more checkboxes in the list (at the top and one at the bottom)</li>
       <li>Select at least one - Give details - Enter name and address (to be confirmed by Sharon)</li>
     </ul>
 </div>
