--- a/app/views/forms/housing/CBLdeclaration2.html
+++ b/app/views/forms/housing/CBLdeclaration2.html
@@ -17,13 +17,13 @@
         </h2>
         <p>These statements apply to you and anybody included in this application:</p> 
         <ul class="govuk-list govuk-list--bullet">
-            <li>I am eligible to apply for housing and I will tell you if my circumstances change</li> 
-            <li>all the information I have given on this application form is true</li> 
+            <li>I'm eligible to apply for housing and I will tell you if my circumstances change</li> 
+            <li>all the information I will give on this application form is true</li> 
             <li>I understand that if I give false information or withhold information you have asked for, my application may be cancelled</li> 
-            <li>if I am offered housing because I have given false information or have withheld information you have asked for, I understand that you may end my tenancy and evict me from my home</li> 
+            <li>if I'm offered housing because I have given false information or have withheld information you've asked for, I understand that you may end my tenancy and evict me from my home</li> 
         </ul>
         <p><strong>Permission to share information:</strong></p>
-        <p>I agree that any information I have given on this application can be shared with other landlords and organisations, in order to find me suitable housing, in line with General Data Protection Regulations.</p>
+        <p>I agree that any information I will give on this application can be shared with other landlords and organisations, in order to find me suitable housing, in line with General Data Protection Regulations.</p>
         <p>You can contact my doctor, hospital consultant, health visitor or social worker, the police or any other relevant person if you need more information for my housing application, in line with General Data Protection Regulations.</p>
 
         <p><a href="https://www.eastrenfrewshire.gov.uk/housing-service-standards">Housing Services Privacy Notice for GDPR</a></p>
@@ -61,7 +61,8 @@
 <div class="content-notes-box">
     <h3 class="govuk-heading-s">Content notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-        <li><strong>this content was not seen by Sharon - there is too much  - but tested ok</strong></li>
+        <li><strong>this content was not seen by Sharon - there is too much  - but tested ok for now</strong></li>
+        <li>as this is now at the beginning, I've change "I have given" to "I will give" twice</li>
     </ul>
 </div>
 <div class="IT-notes-box">
