--- a/app/views/forms/housing/CBLend.html
+++ b/app/views/forms/housing/CBLend.html
@@ -13,7 +13,7 @@
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
       
       <h2 class="govuk-heading-m">
-          Your are about to submit your application
+          You are about to submit your application
       </h2>
     
  
@@ -24,7 +24,7 @@
         iconFallbackText: "Warning"
       }) }}
 
-     <p class="govuk-!-font-weight-bold govuk-!-margin-bottom-9 govuk-!-margin-top-9">On the next page you can download your application summary and save it for future reference.</p>
+     <p class="govuk-!-font-weight-bold govuk-!-margin-bottom-9 govuk-!-margin-top-9">On the next page, you can download your application summary and save it for future reference.</p>
    
 
       {% from "button/macro.njk" import govukButton %}
