--- a/app/views/forms/housing/CBLextra-reason-abuse.html
+++ b/app/views/forms/housing/CBLextra-reason-abuse.html
@@ -74,7 +74,7 @@ Health, care, social and support needs
 </div>
 <div class="design-notes-box">
         <h3 class="govuk-heading-s">Design notes:</h3>
-        <p><strong>we will need a bit of guidance if they say why we ask about the police/strong></p>
+        <p><strong>we will need a bit of guidance if they say why we ask about the police</strong></p>
     </div>
 
 
