--- a/app/views/forms/housing/CBLhomeless-question.html
+++ b/app/views/forms/housing/CBLhomeless-question.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-third">
+    <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-l">
           Apply online for council housing<span class="UR-tag red">NEW</span>
       </h1>
@@ -19,7 +19,7 @@
         name: "homeless",
         fieldset: {
           legend: {
-            text: "Are you homeless or at risk of becoming homeless in the next 60 days?",
+            text: "Are you homeless or at risk of becoming homeless in the next 2 months?",
             isPageHeading: true,
             classes: "govuk-fieldset__legend--m"
           }
