--- a/app/views/forms/housing/CBLadd-child2-loop.html
+++ b/app/views/forms/housing/CBLadd-child2-loop.html
@@ -12,7 +12,7 @@
         Apply online for council housing
       </h1>
       <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
-      <p class="govuk-body-l">Enter each child spending part of their time living with you</p>
+      <p class="govuk-body-l">Enter each child spending part of their time living with you.</p>
       <h2 class="govuk-heading-m">
           Child 1:
       </h2>
