--- a/app/views/forms/housing/CBLjoint.html
+++ b/app/views/forms/housing/CBLjoint.html
@@ -73,6 +73,6 @@
 <div class="IT-notes-box">
     <h3 class="govuk-heading-s">IT notes:</h3>
    <p>new page - <strong>content has changed</strong></p>
-   <p>validation will be needed (if yes, textbox can't be empty) but will need the wording to be agreed before I can provide an error message</p>
+   <p>validation will be needed: Confirm if anyone is a joint applicant (if yes, textbox can't be empty - Enter name ) </p>
 </div>
 {% endblock %}
