--- a/app/views/forms/housing/CBLstart.html
+++ b/app/views/forms/housing/CBLstart.html
@@ -20,8 +20,8 @@
           <ul class="govuk-list govuk-list--bullet">
             <li>this form takes most people around 20 to 30 minutes to complete</li>
             <li>you cannot save the form and go back to it</li>
-            <li>you need addresses for the last 5 years for you and for your joint applicant if you have one</li>
-            <li>you need your National Insurance number if you have one</li>
+            <li>you need addresses for the last 5 years for you and your joint applicant if you have one</li>
+            <li>and your National Insurance number if you have one</li>
           </ul>
       </p>
 
